# intentc

./: .gitignore  Cargo.toml  Makefile  README.md  ecommerece api PRD.md  test_e2e.sh
.antigravity/: context.md
docs/: initial_draft.md  v0_scope.md
docs/intent_syntax/: v0.1.md  v0.2.md  v0.3.md
examples/: app.intent  auth.intent  simple.intent
src/: ast.rs  cli.rs  error.rs  grammar.pest  main.rs  parser.rs  preprocessor.rs  validator.rs
src/codegen/: mod.rs
src/codegen/python/: api.rs  auth.rs  controllers.rs  migrations.rs  mod.rs  models.rs  orm.rs  policies.rs  repositories.rs  rules.rs  services.rs  tests.rs
